dim/spec/test_input/invalid_input/duplicate_metadata.dim
Config:
  - originator: CompanyName
    files:
      - modules/duplicate_meta1.dim
      - modules/duplicate_meta2.dim
    category: module
